# drf_atomic_habits

./: .env.temlate  .env.template  .flake8  .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializer.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_pleasanthabit_time_for_habit_and_more.py  0004_place_owner.py  0005_alter_place_owner.py  0006_usefulhabit_last_notification_and_more.py  0007_pleasanthabit_last_notification_and_more.py
nginx/: nginx.conf
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_customuser_tg_chat_id.py  0004_alter_customuser_tg_chat_id.py
