[tool.poetry]
name = "drf-atomic-habits"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.12"
djangorestframework-simplejwt = "^5.5.1"


[tool.poetry.group.dev.dependencies]
django = "^6.0.5"
djangorestframework = "^3.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
