[tool.poetry]
name = "drf-atomic-habits"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.12"
djangorestframework-simplejwt = "^5.5.1"
django-celery-beat = "^2.9.0"
celery = "^5.6.3"
requests = "^2.34.2"
django-cors-headers = "^4.9.0"
drf-yasg = "^1.21.15"
eventlet = "^0.41.0"
redis = "^7.4.0"
coverage = "^7.14.1"


[tool.poetry.group.dev.dependencies]
django = "^6.0.5"
djangorestframework = "^3.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
